edited relation between Rule record and CampaignRecord